# gdx_dispatch

./: .cross_plane_import_baseline  .dockerignore  .duplicate_block_baseline  .env.lab.example  .env.template  .gitignore  .semgrepignore  .tenant_id_shape_baseline  .tenant_plane_redundant_filter_baseline  .test_durations  ARCHITECTURAL_INVARIANTS.md  CLEANUP_BACKLOG.md  LICENSE  README.md  UX_AUDIT_ACTION_PLAN.md  all_todos.txt  conftest.py  fix.py  fix_alembic.py  patch_tenant.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ai-code-review.yml  ci.yml  coverage.yml  fast-gate.yml  full-gate.yml  release.yml  security.yml
docs/: forecasting-accuracy-roadmap.md
docs/design/: billing-capture-hardening-plan.md  call-capture-followup-plan.md  gl-phase1-core-ledger.md  gl-phase1-implementation-plan.md  gl-phase2-reconciliation.md  gl-phase3-trust-switch.md  mobile-customer-job-create-fix-plan.md  tech-mobile-workflow-plan.md  vendor-invoice-intake-plan.md
docs/ops/: denylist_backend_mode.md
docs/runbooks/: dr_drill_first.md
gdx_dispatch/: alembic.ini  app.py  celery_app.py  main.py  openapi.json  requirements.txt
gdx_dispatch/api/: public_router.py
gdx_dispatch/control/: models.py
gdx_dispatch/core/: admin_flags.py  admin_modules.py  admin_ops.py  ai_logger.py  ai_provider.py  ai_quote.py  ai_recommendations.py  ai_router.py  ai_usage_logger.py  api_errors.py  api_keys.py  (+162 more)
plugins/gdx-plugin-hvac/: pyproject.toml
scripts/: backup-db.sh  run_dispatch_framework_matrix.sh  run_dispatch_phase_tests.sh
tools/: backup_everything.sh  gl_backfill.py
(+1915 files in other folders)
